k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
